--- a/config/PKGBUILD
+++ b/config/PKGBUILD
@@ -5,7 +5,7 @@ epoch=
 pkgdesc="ReplayGain 2.0 loudness normalizer"
 arch=('x86_64')
 url="https://github.com/complexlogic/rsgain"
-license=('GPL')
+license=('BSD')
 groups=()
 depends=('libebur128' 'taglib' 'libavformat.so' 'libavcodec.so' 'libswresample.so' 'libavutil.so' 'libinih')
 makedepends=('cmake')
