--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,10 +137,10 @@ endif ()
 if (WIN32)
   install(DIRECTORY ${PROJECT_BINARY_DIR}/Release/ DESTINATION "./")
   
-  configure_file(${PROJECT_SOURCE_DIR}/CHANGELOG.txt ${PROJECT_BINARY_DIR}/CHANGELOG.txt)
+  configure_file(${PROJECT_SOURCE_DIR}/CHANGELOG ${PROJECT_BINARY_DIR}/CHANGELOG.txt)
   install(FILES ${PROJECT_BINARY_DIR}/CHANGELOG.txt DESTINATION "./")
   
-  configure_file(${PROJECT_SOURCE_DIR}/LICENSE.txt ${PROJECT_BINARY_DIR}/LICENSE.txt)
+  configure_file(${PROJECT_SOURCE_DIR}/LICENSE ${PROJECT_BINARY_DIR}/LICENSE.txt)
   install(FILES ${PROJECT_BINARY_DIR}/LICENSE.txt DESTINATION "./")
   
   configure_file(${PROJECT_SOURCE_DIR}/config/overrides.ini ${PROJECT_BINARY_DIR}/overrides.ini)
