--- a/config/overrides.ini
+++ b/config/overrides.ini
@@ -1,92 +1,103 @@
 [MP2]
-Mode=e
-Lowercase=true
-AlbumGain=true
+Mode=i
+Album=true
+TargetLoudness=-18
 ClippingProtection=true
+MaxPeakLevel=-1.0
+TruePeak=true;
+Lowercase=true
 ID3v2Version=3
 Strip=true
-MaxTruePeakLevel=-1.0
-Pregain=0.0
 
 [MP3]
-Mode=e
-Lowercase=true
-AlbumGain=true
+Mode=i
+Album=true
+TargetLoudness=-18
 ClippingProtection=true
+MaxPeakLevel=-1.0
+TruePeak=true;
+Lowercase=true
 ID3v2Version=3
 Strip=true
-MaxTruePeakLevel=-1.0
-Pregain=0.0
 
 [FLAC]
-Mode=e
-AlbumGain=true
+Mode=i
+Album=true
+TargetLoudness=-18
 ClippingProtection=true
-MaxTruePeakLevel=-1.0
-Pregain=0.0
+MaxPeakLevel=-1.0
+TruePeak=true;
 
 [OGG]
-Mode=e
-AlbumGain=true
+Mode=i
+Album=true
+TargetLoudness=-18
 ClippingProtection=true
-MaxTruePeakLevel=-1.0
-Pregain=0.0
+MaxPeakLevel=-1.0
+TruePeak=true;
 
 [OPUS]
-Mode=e
-AlbumGain=true
+Mode=i
+Album=true
+TargetLoudness=-18
 ClippingProtection=true
-MaxTruePeakLevel=-1.0
-Pregain=0.0
+MaxPeakLevel=-1.0
+TruePeak=true;
 
 [M4A]
-Mode=e
-Lowercase=true
-AlbumGain=true
+Mode=i
+Album=true
+TargetLoudness=-18
 ClippingProtection=true
-MaxTruePeakLevel=-1.0
-Pregain=0.0
+MaxPeakLevel=-1.0
+TruePeak=true;
+Lowercase=true
 
 [WMA]
-Mode=e
-Lowercase=true
-AlbumGain=true
+Mode=i
+Album=true
+TargetLoudness=-18
 ClippingProtection=true
-MaxTruePeakLevel=-1.0
-Pregain=0.0
+MaxPeakLevel=-1.0
+TruePeak=true;
+Lowercase=true
 
 [WAV]
-Mode=e
-Lowercase=true
-AlbumGain=true
+Mode=i
+Album=true
+TargetLoudness=-18
 ClippingProtection=true
+MaxPeakLevel=-1.0
+TruePeak=true;
+Lowercase=true
 ID3v2Version=3
 Strip=false
-MaxTruePeakLevel=-1.0
-Pregain=0.0
 
 [AIFF]
-Mode=e
-Lowercase=true
-AlbumGain=true
+Mode=i
+Album=true
+TargetLoudness=-18
 ClippingProtection=true
+MaxPeakLevel=-1.0
+TruePeak=true;
+Lowercase=true
 ID3v2Version=3
 Strip=false
-MaxTruePeakLevel=-1.0
-Pregain=0.0
 
 [WAVPACK]
-Mode=e
-AlbumGain=true
+Mode=i
+Album=true
+TargetLoudness=-18
 ClippingProtection=true
+MaxPeakLevel=-1.0
+TruePeak=true;
 Strip=true
-MaxTruePeakLevel=-1.0
-Pregain=0.0
 
 [APE]
-Mode=e
-AlbumGain=true
+Mode=i
+Album=true
+TargetLoudness=-18
 ClippingProtection=true
+MaxPeakLevel=-1.0
+TruePeak=true;
 Strip=true
-MaxTruePeakLevel=-1.0
-Pregain=0.0
