Add manfiest file, more refactorings

--- a/config/PKGBUILD
+++ b/config/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=rsgain
-pkgver=2.0.1
+pkgver=3.0
 pkgrel=1
 epoch=
 pkgdesc="ReplayGain 2.0 loudness normalizer"
@@ -7,7 +7,7 @@ arch=('x86_64')
 url="https://github.com/complexlogic/rsgain"
 license=('BSD')
 groups=()
-depends=('libebur128' 'taglib' 'libavformat.so' 'libavcodec.so' 'libswresample.so' 'libavutil.so' 'libinih')
+depends=('libebur128' 'taglib' 'libavformat.so' 'libavcodec.so' 'libswresample.so' 'libavutil.so' 'fmt' 'libinih')
 makedepends=('cmake')
 checkdepends=()
 optdepends=()
