--- a/config/overrides.ini
+++ b/config/overrides.ini
@@ -4,7 +4,7 @@ Album=true
 TargetLoudness=-18
 ClippingProtection=true
 MaxPeakLevel=-1.0
-TruePeak=true;
+TruePeak=true
 Lowercase=true
 ID3v2Version=3
 Strip=true
@@ -15,7 +15,7 @@ Album=true
 TargetLoudness=-18
 ClippingProtection=true
 MaxPeakLevel=-1.0
-TruePeak=true;
+TruePeak=true
 Lowercase=true
 ID3v2Version=3
 Strip=true
@@ -26,7 +26,7 @@ Album=true
 TargetLoudness=-18
 ClippingProtection=true
 MaxPeakLevel=-1.0
-TruePeak=true;
+TruePeak=true
 
 [OGG]
 Mode=i
@@ -34,7 +34,7 @@ Album=true
 TargetLoudness=-18
 ClippingProtection=true
 MaxPeakLevel=-1.0
-TruePeak=true;
+TruePeak=true
 
 [OPUS]
 Mode=i
@@ -42,7 +42,7 @@ Album=true
 TargetLoudness=-18
 ClippingProtection=true
 MaxPeakLevel=-1.0
-TruePeak=true;
+TruePeak=true
 
 [M4A]
 Mode=i
@@ -50,7 +50,7 @@ Album=true
 TargetLoudness=-18
 ClippingProtection=true
 MaxPeakLevel=-1.0
-TruePeak=true;
+TruePeak=true
 Lowercase=true
 
 [WMA]
@@ -59,7 +59,7 @@ Album=true
 TargetLoudness=-18
 ClippingProtection=true
 MaxPeakLevel=-1.0
-TruePeak=true;
+TruePeak=true
 Lowercase=true
 
 [WAV]
@@ -68,7 +68,7 @@ Album=true
 TargetLoudness=-18
 ClippingProtection=true
 MaxPeakLevel=-1.0
-TruePeak=true;
+TruePeak=true
 Lowercase=true
 ID3v2Version=3
 Strip=false
@@ -79,7 +79,7 @@ Album=true
 TargetLoudness=-18
 ClippingProtection=true
 MaxPeakLevel=-1.0
-TruePeak=true;
+TruePeak=true
 Lowercase=true
 ID3v2Version=3
 Strip=false
@@ -90,7 +90,7 @@ Album=true
 TargetLoudness=-18
 ClippingProtection=true
 MaxPeakLevel=-1.0
-TruePeak=true;
+TruePeak=true
 Strip=true
 
 [APE]
@@ -99,5 +99,5 @@ Album=true
 TargetLoudness=-18
 ClippingProtection=true
 MaxPeakLevel=-1.0
-TruePeak=true;
+TruePeak=true
 Strip=true
