--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,15 @@
 # This file is released under the 2 clause BSD license, see COPYING
 
 cmake_minimum_required(VERSION 3.13)
-project(
-  rsgain 
-  VERSION 2.0.1
+project(rsgain 
+  VERSION 3.0
   DESCRIPTION "ReplayGain 2.0 loudness normalizer" 
   HOMEPAGE_URL "https://github.com/complexlogic/rsgain"
-  LANGUAGES C CXX
+  LANGUAGES CXX
 )
 set(CMAKE_CXX_STANDARD 20)
 set(EXECUTABLE_TITLE "rsgain")
+include_directories(${PROJECT_BINARY_DIR})
 
 # GCC 9 and earlier are not supported due to C++20 features
 if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 10)
@@ -25,90 +25,42 @@ if (WIN32)
   set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${EXECUTABLE_TITLE})
 endif ()
 
-configure_file(
-  "${PROJECT_SOURCE_DIR}/config/config.h.in" 
-  "${PROJECT_BINARY_DIR}/config.h"
-)
+configure_file("${PROJECT_SOURCE_DIR}/config/config.h.in" "${PROJECT_BINARY_DIR}/config.h")
 
 # Find dependencies - Windows
 if (WIN32)
   find_package(ffmpeg MODULE REQUIRED)
-  
   find_path(TAGLIB_INCLUDE_DIR "taglib/id3v2tag.h" REQUIRED)
   set(TAGLIB_INCLUDE_DIR ${TAGLIB_INCLUDE_DIR}/taglib)
   find_library(TAGLIB tag REQUIRED)
-  
   find_path(LIBEBUR128_INCLUDE_DIR "ebur128.h" REQUIRED)
   find_library(LIBEBUR128 ebur128 REQUIRED)
-  
   find_path(FMT_INCLUDE_DIR "fmt/core.h" REQUIRED)
   find_library(FMT fmt REQUIRED)
-  
   find_path(GETOPT_INCLUDE_DIR "getopt.h" REQUIRED)
   find_library(GETOPT getopt REQUIRED)
-  
   find_path(INIH_INCLUDE_DIR "ini.h" REQUIRED)
   find_library(INIH inih REQUIRED)
   
-  include_directories(
-    ${FFMPEG_INCLUDE_DIRS} 
-    ${TAGLIB_INCLUDE_DIR} 
-    ${LIBEBUR128_INCLUDE_DIR}
-	${FMT_INCLUDE_DIR}
-    ${GETOPT_INCLUDE_DIR}
-    ${INIH_INCLUDE_DIR}
-    ${PROJECT_BINARY_DIR}
-  )
-  link_libraries(
-    ${FFMPEG_LIBRARIES} 
-    ${TAGLIB} 
-    ${LIBEBUR128} 
-	${FMT}
-    ${GETOPT}
-    ${INIH}
-  )
-  
 # Find dependencies - Linux/Mac
-else ()
+elseif (UNIX)
   if (APPLE)
     # Fix linking on 10.14+. See https://stackoverflow.com/questions/54068035
     link_directories(/usr/local/lib)
   endif (APPLE)
   
   find_package(PkgConfig MODULE REQUIRED)
-  pkg_check_modules(LAVC REQUIRED libavcodec)
-  pkg_check_modules(LAVF REQUIRED libavformat)
-  pkg_check_modules(LAVR REQUIRED libswresample)
-  pkg_check_modules(LAVU REQUIRED libavutil)
-  pkg_check_modules(LTAG REQUIRED taglib)
-  pkg_check_modules(EBUR128 REQUIRED libebur128>=1.2.4)
-  pkg_check_modules(INIH REQUIRED inih)
-  pkg_check_modules(FMT REQUIRED fmt)
-
-  include_directories(
-    ${LAVC_INCLUDE_DIRS}
-    ${LAVF_INCLUDE_DIRS}
-    ${LAVR_INCLUDE_DIRS}
-    ${LAVU_INCLUDE_DIRS}
-    ${LTAG_INCLUDE_DIRS}
-    ${EBUR128_INCLUDE_DIRS}
-    ${INIH_INCLUDE_DIRS}
-    ${FMT_INCLUDE_DIRS}
-    ${PROJECT_BINARY_DIR}
-  )
-  link_libraries(
-    ${LAVC_LIBRARIES}
-    ${LAVF_LIBRARIES}
-    ${LAVR_LIBRARIES}
-    ${LAVU_LIBRARIES}
-    ${LTAG_LIBRARIES}
-    ${INIH_LIBRARIES}
-    ${FMT_LIBRARIES}
-    ${EBUR128_LIBRARIES}
-  )
+  pkg_check_modules(LIBAVCODEC REQUIRED IMPORTED_TARGET libavcodec)
+  pkg_check_modules(LIBAVFORMAT REQUIRED IMPORTED_TARGET libavformat)
+  pkg_check_modules(LIBSWRESAMPLE REQUIRED IMPORTED_TARGET libswresample)
+  pkg_check_modules(LIBAVUTIL REQUIRED IMPORTED_TARGET libavutil)
+  pkg_check_modules(TAGLIB REQUIRED IMPORTED_TARGET taglib)
+  pkg_check_modules(LIBEBUR128 REQUIRED IMPORTED_TARGET libebur128>=1.2.4)
+  pkg_check_modules(INIH REQUIRED IMPORTED_TARGET inih)
+  pkg_check_modules(FMT REQUIRED IMPORTED_TARGET fmt)
 endif()
 
-# Generate Windows application manifest
+# Generate Windows application manifest and resource file
 if (WIN32)
   set(VERSION_M ${PROJECT_VERSION_MAJOR})
   if (PROJECT_VERSION_MINOR)
@@ -126,30 +78,24 @@ if (WIN32)
   else ()
     set(VERSION_P 0)
   endif()
-  configure_file(
-    ${PROJECT_SOURCE_DIR}/config/${PROJECT_NAME}.manifest.in 
-    ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.manifest
-  )
+  configure_file(${PROJECT_SOURCE_DIR}/config/${PROJECT_NAME}.manifest.in ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.manifest)
+  configure_file(${PROJECT_SOURCE_DIR}/config/versioninfo.rc.in ${PROJECT_BINARY_DIR}/versioninfo.rc)
 endif()
 
 # Build source files
 add_subdirectory(src)
 
-# Compile options - Linux/Mac
-if (UNIX)
-  set_target_properties(rsgain PROPERTIES COMPILE_FLAGS "-Wall -pedantic -g")
-endif ()
+message("Build type is $<CONFIG>")
 
 # Installation - Windows
 if (WIN32)
-  install(DIRECTORY ${PROJECT_BINARY_DIR}/Release/ DESTINATION "./")
-  
+  #set(X_VCPKG_APPLOCAL_DEPS_INSTALL ON)
+  #install(TARGETS ${EXECUTABLE_TITLE} DESTINATION ".")
+  install(DIRECTORY ${PROJECT_BINARY_DIR}/$<CONFIG>/ DESTINATION ".")
   configure_file(${PROJECT_SOURCE_DIR}/CHANGELOG ${PROJECT_BINARY_DIR}/CHANGELOG.txt)
   install(FILES ${PROJECT_BINARY_DIR}/CHANGELOG.txt DESTINATION "./")
-  
   configure_file(${PROJECT_SOURCE_DIR}/LICENSE ${PROJECT_BINARY_DIR}/LICENSE.txt)
   install(FILES ${PROJECT_BINARY_DIR}/LICENSE.txt DESTINATION "./")
-  
   configure_file(${PROJECT_SOURCE_DIR}/config/overrides.ini ${PROJECT_BINARY_DIR}/overrides.ini)
   install(FILES ${PROJECT_BINARY_DIR}/overrides.ini DESTINATION "./")
   
@@ -172,7 +118,7 @@ if (WIN32)
   include(CPack)
   
 # Installation - Linux/Mac
-else ()
+elseif (UNIX)
   install(TARGETS ${EXECUTABLE_TITLE} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
   install(FILES ${PROJECT_SOURCE_DIR}/config/overrides.ini DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${EXECUTABLE_TITLE})
   
@@ -184,7 +130,7 @@ else ()
     if (NOT CPACK_DEBIAN_PACKAGE_ARCHITECTURE)
       set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
     endif()
-    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libavcodec58 (>= 4.2.4), libavutil56 (>= 4.2.4), libswresample3  (>= 4.2.4), libavformat58 (>= 4.2.4), libtag1v5 (>= 1.11.1), libebur128-1 (>=1.2.4), libinih1, libc6 (>=2.29), libstdc++6 (>=10.2)")
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libavcodec58 (>= 4.2.4), libavutil56 (>= 4.2.4), libswresample3  (>= 4.2.4), libavformat58 (>= 4.2.4), libtag1v5 (>= 1.11.1), libebur128-1 (>=1.2.4), fmtlib, libinih1, libc6 (>=2.29), libstdc++6 (>=10.2)")
     set(CPACK_DEBIAN_PACKAGE_MAINTAINER "complexlogic")
     set(CPACK_DEBIAN_PACKAGE_SECTION "utils")
     set(CPACK_DEBIAN_ARCHIVE_TYPE "gnutar")
