Changed clipping protection behavior

--- a/config/overrides.ini
+++ b/config/overrides.ini
@@ -2,7 +2,7 @@
 Mode=i
 Album=true
 TargetLoudness=-18
-ClippingProtection=true
+ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 Lowercase=true
@@ -13,7 +13,7 @@ Strip=true
 Mode=i
 Album=true
 TargetLoudness=-18
-ClippingProtection=true
+ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 Lowercase=true
@@ -24,7 +24,7 @@ Strip=true
 Mode=i
 Album=true
 TargetLoudness=-18
-ClippingProtection=true
+ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 
@@ -32,7 +32,7 @@ TruePeak=true
 Mode=i
 Album=true
 TargetLoudness=-18
-ClippingProtection=true
+ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 
@@ -40,7 +40,7 @@ TruePeak=true
 Mode=i
 Album=true
 TargetLoudness=-18
-ClippingProtection=true
+ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 
@@ -48,7 +48,7 @@ TruePeak=true
 Mode=i
 Album=true
 TargetLoudness=-18
-ClippingProtection=true
+ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 Lowercase=true
@@ -57,7 +57,7 @@ Lowercase=true
 Mode=i
 Album=true
 TargetLoudness=-18
-ClippingProtection=true
+ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 Lowercase=true
@@ -66,7 +66,7 @@ Lowercase=true
 Mode=i
 Album=true
 TargetLoudness=-18
-ClippingProtection=true
+ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 Lowercase=true
@@ -77,7 +77,7 @@ Strip=false
 Mode=i
 Album=true
 TargetLoudness=-18
-ClippingProtection=true
+ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 Lowercase=true
@@ -88,7 +88,7 @@ Strip=false
 Mode=i
 Album=true
 TargetLoudness=-18
-ClippingProtection=true
+ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 Strip=true
@@ -97,7 +97,7 @@ Strip=true
 Mode=i
 Album=true
 TargetLoudness=-18
-ClippingProtection=true
+ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 Strip=true
