Change tag mode INI key name

--- a/config/overrides.ini
+++ b/config/overrides.ini
@@ -1,5 +1,5 @@
 [MP2]
-Mode=i
+TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
@@ -10,7 +10,7 @@ ID3v2Version=3
 Strip=true
 
 [MP3]
-Mode=i
+TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
@@ -21,7 +21,7 @@ ID3v2Version=3
 Strip=true
 
 [FLAC]
-Mode=i
+TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
@@ -29,7 +29,7 @@ MaxPeakLevel=-1.0
 TruePeak=true
 
 [OGG]
-Mode=i
+TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
@@ -37,7 +37,7 @@ MaxPeakLevel=-1.0
 TruePeak=true
 
 [OPUS]
-Mode=i
+TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
@@ -45,7 +45,7 @@ MaxPeakLevel=-1.0
 TruePeak=true
 
 [M4A]
-Mode=i
+TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
@@ -54,7 +54,7 @@ TruePeak=true
 Lowercase=true
 
 [WMA]
-Mode=i
+TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
@@ -63,7 +63,7 @@ TruePeak=true
 Lowercase=true
 
 [WAV]
-Mode=i
+TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
@@ -74,7 +74,7 @@ ID3v2Version=3
 Strip=false
 
 [AIFF]
-Mode=i
+TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
@@ -85,7 +85,7 @@ ID3v2Version=3
 Strip=false
 
 [WAVPACK]
-Mode=i
+TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
@@ -94,7 +94,7 @@ TruePeak=true
 Strip=true
 
 [APE]
-Mode=i
+TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
