Refactored tagging, removed strip tags feature

--- a/config/overrides.ini
+++ b/config/overrides.ini
@@ -7,7 +7,6 @@ MaxPeakLevel=-1.0
 TruePeak=true
 Lowercase=true
 ID3v2Version=3
-Strip=true
 
 [MP3]
 TagMode=i
@@ -18,7 +17,6 @@ MaxPeakLevel=-1.0
 TruePeak=true
 Lowercase=true
 ID3v2Version=3
-Strip=true
 
 [FLAC]
 TagMode=i
@@ -43,6 +41,7 @@ TargetLoudness=-18
 ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
+R128Tags=false
 
 [M4A]
 TagMode=i
@@ -71,7 +70,6 @@ MaxPeakLevel=-1.0
 TruePeak=true
 Lowercase=true
 ID3v2Version=3
-Strip=false
 
 [AIFF]
 TagMode=i
@@ -82,7 +80,6 @@ MaxPeakLevel=-1.0
 TruePeak=true
 Lowercase=true
 ID3v2Version=3
-Strip=false
 
 [WAVPACK]
 TagMode=i
@@ -91,7 +88,6 @@ TargetLoudness=-18
 ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
-Strip=true
 
 [APE]
 TagMode=i
@@ -100,4 +96,3 @@ TargetLoudness=-18
 ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
-Strip=true
