--- a/config/config.h.in
+++ b/config/config.h.in
@@ -2,3 +2,7 @@
 #define EXECUTABLE_TITLE "@EXECUTABLE_TITLE@"
 #define PROJECT_VERSION "@PROJECT_VERSION@"
 #define PROJECT_URL "@PROJECT_HOMEPAGE_URL@"
+
+#ifdef __unix__
+#define PRESETS_DIR "@PRESETS_DIR@"
+#endif
