--- a/config/default.ini
+++ b/config/default.ini
@@ -1,98 +1,106 @@
-[MP2]
+[Global]
 TagMode=i
 Album=true
 TargetLoudness=-18
 ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
-Lowercase=true
+
+[MP2]
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
+Lowercase=false
 ID3v2Version=3
 
 [MP3]
-TagMode=i
-Album=true
-TargetLoudness=-18
-ClipMode=p
-MaxPeakLevel=-1.0
-TruePeak=true
-Lowercase=true
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
+Lowercase=false
 ID3v2Version=3
 
 [FLAC]
-TagMode=i
-Album=true
-TargetLoudness=-18
-ClipMode=p
-MaxPeakLevel=-1.0
-TruePeak=true
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
 
-[OGG]
-TagMode=i
-Album=true
-TargetLoudness=-18
-ClipMode=p
-MaxPeakLevel=-1.0
-TruePeak=true
+[Ogg]
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
 
-[OPUS]
-TagMode=i
-Album=true
-TargetLoudness=-18
-ClipMode=p
-MaxPeakLevel=-1.0
-TruePeak=true
+[Opus]
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
 R128Tags=false
 
 [M4A]
-TagMode=i
-Album=true
-TargetLoudness=-18
-ClipMode=p
-MaxPeakLevel=-1.0
-TruePeak=true
-Lowercase=true
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
+Lowercase=false
 
 [WMA]
-TagMode=i
-Album=true
-TargetLoudness=-18
-ClipMode=p
-MaxPeakLevel=-1.0
-TruePeak=true
-Lowercase=true
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
+Lowercase=false
 
 [WAV]
-TagMode=i
-Album=true
-TargetLoudness=-18
-ClipMode=p
-MaxPeakLevel=-1.0
-TruePeak=true
-Lowercase=true
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
+Lowercase=false
 ID3v2Version=3
 
 [AIFF]
-TagMode=i
-Album=true
-TargetLoudness=-18
-ClipMode=p
-MaxPeakLevel=-1.0
-TruePeak=true
-Lowercase=true
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
+Lowercase=false
 ID3v2Version=3
 
-[WAVPACK]
-TagMode=i
-Album=true
-TargetLoudness=-18
-ClipMode=p
-MaxPeakLevel=-1.0
-TruePeak=true
+[Wavpack]
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
 
 [APE]
-TagMode=i
-Album=true
-TargetLoudness=-18
-ClipMode=p
-MaxPeakLevel=-1.0
-TruePeak=true
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
