--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,11 +114,10 @@ if (WIN32)
   
 # Installation - Linux/Mac
 elseif (UNIX)
-  install(TARGETS ${EXECUTABLE_TITLE} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+  install(TARGETS ${EXECUTABLE_TITLE} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
 
   set(PRESETS_DIR ${CMAKE_INSTALL_PREFIX}/share/${EXECUTABLE_TITLE}/presets)
-  install(FILES ${PROJECT_SOURCE_DIR}/config/default.ini DESTINATION ${PRESETS_DIR})
-  
+  install(DIRECTORY "${PROJECT_SOURCE_DIR}/config/presets" DESTINATION "${CMAKE_INSTALL_PREFIX}/share/${EXECUTABLE_TITLE}")
   # Build Debian packages
   if (PACKAGE STREQUAL "DEB")
     set(CPACK_DEBIAN_PACKAGE_NAME ${EXECUTABLE_TITLE})
