--- a/config/presets/ebur128.ini
+++ b/config/presets/ebur128.ini
@@ -1,106 +1,106 @@
 [Global]
 TagMode=i
 Album=true
-TargetLoudness=-18
+TargetLoudness=-23
 ClipMode=p
-MaxPeakLevel=0.0
-TruePeak=false
+MaxPeakLevel=-1.0
+TruePeak=true
 
 [MP3]
 #TagMode=i
 #Album=true
-#TargetLoudness=-18
+#TargetLoudness=-23
 #ClipMode=p
-#MaxPeakLevel=0.0
-#TruePeak=false
+#MaxPeakLevel=-1.0
+#TruePeak=true
 Lowercase=false
 ID3v2Version=3
 
 [FLAC]
 #TagMode=i
 #Album=true
-#TargetLoudness=-18
+#TargetLoudness=-23
 #ClipMode=p
-#MaxPeakLevel=0.0
-#TruePeak=false
+#MaxPeakLevel=-1.0
+#TruePeak=true
 
 [Ogg]
 #TagMode=i
 #Album=true
-#TargetLoudness=-18
+#TargetLoudness=-23
 #ClipMode=p
-#MaxPeakLevel=0.0
-#TruePeak=false
+#MaxPeakLevel=-1.0
+#TruePeak=true
 
 [Opus]
 #TagMode=i
 #Album=true
-#TargetLoudness=-18
+#TargetLoudness=-23
 #ClipMode=p
-#MaxPeakLevel=0.0
-#TruePeak=false
+#MaxPeakLevel=-1.0
+#TruePeak=true
 OpusMode=d
 
 [M4A]
 #TagMode=i
 #Album=true
-#TargetLoudness=-18
+#TargetLoudness=-23
 #ClipMode=p
-#MaxPeakLevel=0.0
-#TruePeak=false
+#MaxPeakLevel=-1.0
+#TruePeak=true
 Lowercase=false
 
 [WMA]
 #TagMode=i
 #Album=true
-#TargetLoudness=-18
+#TargetLoudness=-23
 #ClipMode=p
-#MaxPeakLevel=0.0
-#TruePeak=false
+#MaxPeakLevel=-1.0
+#TruePeak=true
 Lowercase=false
 
 [MP2]
 #TagMode=i
 #Album=true
-#TargetLoudness=-18
+#TargetLoudness=-23
 #ClipMode=p
-#MaxPeakLevel=0.0
-#TruePeak=false
+#MaxPeakLevel=-1.0
+#TruePeak=true
 Lowercase=false
 ID3v2Version=3
 
 [WAV]
 #TagMode=i
 #Album=true
-#TargetLoudness=-18
+#TargetLoudness=-23
 #ClipMode=p
-#MaxPeakLevel=0.0
-#TruePeak=false
+#MaxPeakLevel=-1.0
+#TruePeak=true
 Lowercase=false
 ID3v2Version=3
 
 [AIFF]
 #TagMode=i
 #Album=true
-#TargetLoudness=-18
+#TargetLoudness=-23
 #ClipMode=p
-#MaxPeakLevel=0.0
-#TruePeak=false
+#MaxPeakLevel=-1.0
+#TruePeak=true
 Lowercase=false
 ID3v2Version=3
 
 [Wavpack]
 #TagMode=i
 #Album=true
-#TargetLoudness=-18
+#TargetLoudness=-23
 #ClipMode=p
-#MaxPeakLevel=0.0
-#TruePeak=false
+#MaxPeakLevel=-1.0
+#TruePeak=true
 
 [APE]
 #TagMode=i
 #Album=true
-#TargetLoudness=-18
+#TargetLoudness=-23
 #ClipMode=p
-#MaxPeakLevel=0.0
-#TruePeak=false
+#MaxPeakLevel=-1.0
+#TruePeak=true
