--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,7 @@ elseif (UNIX)
   pkg_check_modules(LIBAVFORMAT REQUIRED IMPORTED_TARGET libavformat)
   pkg_check_modules(LIBSWRESAMPLE REQUIRED IMPORTED_TARGET libswresample)
   pkg_check_modules(LIBAVUTIL REQUIRED IMPORTED_TARGET libavutil)
-  pkg_check_modules(TAGLIB REQUIRED IMPORTED_TARGET taglib)
+  pkg_check_modules(TAGLIB REQUIRED IMPORTED_TARGET taglib>=1.12)
   pkg_check_modules(LIBEBUR128 REQUIRED IMPORTED_TARGET libebur128>=1.2.4)
   pkg_check_modules(INIH REQUIRED IMPORTED_TARGET inih)
   pkg_check_modules(FMT REQUIRED IMPORTED_TARGET fmt)
